Backfill a heap of reading dates and ISBNs
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -372,7 +372,10 @@
       cover: https://cdn.utf9k.net/books/crossing-the-chasm.jpg
       cover_height: 1251
       cover_width: 800
+      isbn13: 9780060517120
+      asin: 0060517123
       link: https://openlibrary.org/works/OL20320657W/Crossing_the_Chasm_3rd_Edition
+      date_started: 2021-05-03
       date_finished: 2021-08-09
       recommended: true
       progress: 100
@@ -383,7 +386,10 @@
       cover: https://cdn.utf9k.net/books/the-usefulness-of-useless-knowledge.jpg
       cover_height: 2100
       cover_width: 1350
+      isbn13: 9780691174761
+      asin: 0691174768
       link: https://openlibrary.org/works/OL24725948W/The_Usefulness_of_Useless_Knowledge
+      date_started: 2021-06-11
       date_finished: 2021-07-30
       recommended: false
       progress: 100
@@ -405,8 +411,11 @@
       cover: https://cdn.utf9k.net/books/the-big-four.jpg
       cover_height: 1382
       cover_width: 904
+      isbn13: 9781863959964
+      asin: 1863959963
       link: https://openlibrary.org/works/OL19762252W/The_Big_Four
-      date_finished: 2021-05-30
+      date_started: 2021-05-03
+      date_finished: 2021-05-29
       recommended: true
       progress: 100
 
@@ -416,7 +425,10 @@
       cover: https://cdn.utf9k.net/books/little-rice.jpg
       cover_height: 1500
       cover_width: 1000
+      isbn13: 9780990976325
+      asin: 0990976327
       link: https://openlibrary.org/works/OL17709914W/Little_Rice
+      date_started: null
       date_finished: 2021-05-05
       recommended: false
       progress: 100
@@ -427,7 +439,10 @@
       cover: https://cdn.utf9k.net/books/the-waxman-report.jpg
       cover_height: 2600
       cover_width: 1711
+      isbn13: 9780446519250
+      asin: 0446519251
       link: https://openlibrary.org/works/OL9493402W/The_Waxman_Report
+      date_started: null
       date_finished: 2021-04-24
       recommended: true
       progress: 100
@@ -438,7 +453,10 @@
       cover: https://cdn.utf9k.net/books/in-the-beginning-was-the-command-line.jpg
       cover_height: 1853
       cover_width: 1200
+      isbn13: null
+      asin: B0DTRLCN3R
       link: https://openlibrary.org/works/OL38477W/In_the_Beginning...Was_the_Command_Line
+      date_started: 2021-01-01
       date_finished: 2021-02-20
       recommended: false
       progress: 100
@@ -449,7 +467,10 @@
       cover: https://cdn.utf9k.net/books/the-dip.jpg
       cover_height: 2122
       cover_width: 1500
+      isbn13: 9781591841661
+      asin: 1591841666
       link: https://openlibrary.org/works/OL2329204W/The_Dip
+      date_started: 2021-02-12
       date_finished: 2021-02-13
       recommended: false
       progress: 100
@@ -460,7 +481,10 @@
       cover: https://cdn.utf9k.net/books/propaganda.jpg
       cover_height: 1192
       cover_width: 768
+      isbn13: 9780970312594
+      asin: 0970312598
       link: https://openlibrary.org/works/OL21948057W/Propaganda
+      date_started: 2021-01-18
       date_finished: 2021-02-12
       recommended: true
       progress: 100
@@ -474,7 +498,10 @@
       cover: https://cdn.utf9k.net/books/in-the-plex.jpg
       cover_height: 2132
       cover_width: 1400
+      isbn13: 9781416596585
+      asin: 1416596585
       link: https://openlibrary.org/works/OL17717287W/In_the_Plex
+      date_started: 2020-10-18
       date_finished: 2020-12-28
       recommended: true
       progress: 100
@@ -485,7 +512,10 @@
       cover: https://cdn.utf9k.net/books/naked-pictures-of-famous-people.jpg
       cover_height: 1200
       cover_width: 797
+      isbn13: 9780688171629
+      asin: 0688171621
       link: https://openlibrary.org/works/OL1959419W/Naked_Pictures_of_Famous_People
+      date_started: 2020-11-10
       date_finished: 2020-12-05
       recommended: false
       progress: 100
@@ -496,7 +526,10 @@
       cover: https://cdn.utf9k.net/books/the-checklist-manifesto.jpg
       cover_height: 2100
       cover_width: 1400
+      isbn13: 9780805091748
+      asin: 0805091742
       link: https://openlibrary.org/works/OL15436462W/The_Checklist_Manifesto
+      date_started: 2020-11-21
       date_finished: 2020-12-04
       recommended: true
       progress: 100
@@ -507,7 +540,10 @@
       cover: https://cdn.utf9k.net/books/greenlights.jpg
       cover_height: 3000
       cover_width: 2088
+      isbn13: 9780593139134
+      asin: 0593139135
       link: https://openlibrary.org/works/OL23520310W/Greenlights
+      date_started: 2020-10-28
       date_finished: 2020-11-09
       recommended: false
       progress: 100
@@ -518,7 +554,10 @@
       cover: https://cdn.utf9k.net/books/the-death-of-ivan-ilych.jpg
       cover_height: 2025
       cover_width: 1256
+      isbn13: 9781600964336
+      asin: 1600964338
       link: https://openlibrary.org/works/OL20281370W/The_Death_of_Ivan_Ilych
+      date_started: 2020-10-03
       date_finished: 2020-10-24
       recommended: false
       progress: 100
@@ -529,7 +568,10 @@
       cover: https://cdn.utf9k.net/books/as-we-may-think.jpg
       cover_height: 4032
       cover_width: 3024
+      isbn13: null
+      asin: B0DTT7FXNY
       link: https://openlibrary.org/works/OL5098582W/As_We_May_Think
+      date_started: 2020-09-30
       date_finished: 2020-09-30
       recommended: true
       progress: 100
@@ -540,7 +582,10 @@
       cover: https://cdn.utf9k.net/books/talking-to-my-daughter-about-the-economy.jpg
       cover_height: 2339
       cover_width: 1524
+      isbn13: 9780374718435
+      asin: B076H4WMY1
       link: https://openlibrary.org/works/OL20152367W/Talking_to_My_Daughter_About_the_Economy
+      date_started: 2020-09-14
       date_finished: 2020-09-30
       recommended: true
       progress: 100
@@ -551,7 +596,10 @@
       cover: https://cdn.utf9k.net/books/the-miracle-of-mindfulness.jpg
       cover_height: 1809
       cover_width: 1200
+      isbn13: 9780807012390
+      asin: 0807012394
       link: https://openlibrary.org/works/OL12381026W/The_Miracle_of_Mindfulness
+      date_started: 2020-09-14
       date_finished: 2020-09-19
       recommended: false
       progress: 100
@@ -562,7 +610,10 @@
       cover: https://cdn.utf9k.net/books/on-bullshit.jpg
       cover_height: 1872
       cover_width: 1240
+      isbn13: 9780691122946
+      asin: 0691122946
       link: https://openlibrary.org/works/OL1829528W/On_Bullshit
+      date_started: null
       date_finished: 2020-09-15
       recommended: true
       progress: 100
@@ -573,7 +624,10 @@
       cover: https://cdn.utf9k.net/books/the-curse-of-bigness.jpg
       cover_height: 2326
       cover_width: 1507
+      isbn13: 9780999745465
+      asin: 0999745468
       link: https://openlibrary.org/works/OL19764853W/The_Curse_of_Bigness
+      date_started: 2020-09-12
       date_finished: 2020-09-14
       recommended: true
       progress: 100
@@ -584,7 +638,10 @@
       cover: https://cdn.utf9k.net/books/memos-from-the-chairman.jpg
       cover_height: 1616
       cover_width: 1200
+      isbn13: 9780761103462
+      asin: 0761103465
       link: https://openlibrary.org/works/OL2646874W/Memos_from_the_Chairman
+      date_started: null
       date_finished: 2020-09-11
       recommended: false
       progress: 100
@@ -595,7 +652,10 @@
       cover: https://cdn.utf9k.net/books/learning-http2.jpg
       cover_height: 1575
       cover_width: 1200
+      isbn13: 9781491962442
+      asin: 1491962445
       link: https://openlibrary.org/works/OL20055086W/Learning_HTTP_2
+      date_started: null
       date_finished: 2020-09-04
       recommended: false
       progress: 100
@@ -606,7 +666,10 @@
       cover: https://cdn.utf9k.net/books/the-master-switch.jpg
       cover_height: 1889
       cover_width: 1200
+      isbn13: 9780307269935
+      asin: 0307269930
       link: https://openlibrary.org/works/OL15118227W/The_Master_Switch
+      date_started: 2020-06-11
       date_finished: 2020-08-09
       recommended: true
       progress: 100
@@ -617,7 +680,10 @@
       cover: https://cdn.utf9k.net/books/atomic-habits.jpg
       cover_height: 2765
       cover_width: 1807
+      isbn13: null
+      asin: B07D23CFGR
       link: https://openlibrary.org/works/OL17930368W/Atomic_Habits
+      date_started: null
       date_finished: 2020-07-12
       recommended: false
       progress: 100
@@ -628,7 +694,10 @@
       cover: https://cdn.utf9k.net/books/the-inner-game-of-tennis.jpg
       cover_height: 1855
       cover_width: 1200
+      isbn13: 9780679778318
+      asin: 0679778314
       link: https://openlibrary.org/works/OL20307725W/The_Inner_Game_of_Tennis
+      date_started: 2020-06-01
       date_finished: 2020-06-06
       recommended: true
       progress: 100
@@ -639,7 +708,10 @@
       cover: https://cdn.utf9k.net/books/zen-in-the-art-of-writing.jpg
       cover_height: 1830
       cover_width: 1200
+      isbn13: 9780553296341
+      asin: 0553296345
       link: https://openlibrary.org/works/OL103179W/Zen_in_The_Art_of_Writing
+      date_started: null
       date_finished: 2020-05-11
       recommended: false
       progress: 100
@@ -650,7 +722,10 @@
       cover: https://cdn.utf9k.net/books/red-tape.jpg
       cover_height: 2550
       cover_width: 1650
+      isbn13: 9780815748410
+      asin: 0815748418
       link: https://openlibrary.org/works/OL3479766W/Red_Tape
+      date_started: 2020-02-25
       date_finished: 2020-03-23
       recommended: false
       progress: 100
@@ -661,7 +736,10 @@
       cover: https://cdn.utf9k.net/books/why-i-write.jpg
       cover_height: 2550
       cover_width: 1650
+      isbn13: 9780143036357
+      asin: 0143036351
       link: https://openlibrary.org/works/OL1168147W/Why_I_Write
+      date_started: 2020-02-09
       date_finished: 2020-02-25
       recommended: false
       progress: 100
@@ -672,7 +750,10 @@
       cover: https://cdn.utf9k.net/books/dirty-politics.jpg
       cover_height: 1442
       cover_width: 1000
+      isbn13: null
+      asin: B0DT1G9HQS
       link: https://openlibrary.org/works/OL17043709W/Dirty_Politics
+      date_started: 2020-02-07
       date_finished: 2020-02-09
       recommended: true
       progress: 100
@@ -683,7 +764,10 @@
       cover: https://cdn.utf9k.net/books/getting-things-done.jpg
       cover_height: 2339
       cover_width: 1513
+      isbn13: 9780142000281
+      asin: 0142000280
       link: https://openlibrary.org/works/OL20777755W/Getting_Things_Done
+      date_started: null
       date_finished: 2020-02-07
       recommended: false
       progress: 100
@@ -694,7 +778,10 @@
       cover: https://cdn.utf9k.net/books/the-information-diet.jpg
       cover_height: 1000
       cover_width: 667
+      isbn13: 9781449304683
+      asin: 1449304680
       link: https://openlibrary.org/works/OL16538242W/The_Information_Diet
+      date_started: 2020-01-26
       date_finished: 2020-01-30
       recommended: false
       progress: 100
@@ -705,7 +792,10 @@
       cover: https://cdn.utf9k.net/books/the-myth-of-sisyphus.jpg
       cover_height: 1851
       cover_width: 1200
+      isbn13: 9780141182001
+      asin: 0141182008
       link: https://openlibrary.org/works/OL1230690W/The_Myth_of_Sisyphus_and_Other_Essays
+      date_started: 2020-01-20
       date_finished: 2020-01-26
       recommended: false
       progress: 100
@@ -719,7 +809,10 @@
       cover: https://cdn.utf9k.net/books/the-unicorn-project.jpg
       cover_height: 2560
       cover_width: 1707
+      isbn13: 9781942788768
+      asin: 1942788762
       link: https://openlibrary.org/works/OL20716769W/The_Unicorn_Project
+      date_started: null
       date_finished: 2019-12-25
       recommended: false
       progress: 100
@@ -730,7 +823,10 @@
       cover: https://cdn.utf9k.net/books/super-pumped.jpg
       cover_height: 2560
       cover_width: 1707
+      isbn13: 9780393652246
+      asin: 0393652246
       link: https://openlibrary.org/works/OL20125074W/Super_Pumped
+      date_started: null
       date_finished: 2019-11-26
       recommended: true
       progress: 100
@@ -744,7 +840,10 @@
       cover: https://cdn.utf9k.net/books/how-to-win-friends-and-influence-people.jpg
       cover_height: 2473
       cover_width: 1585
+      isbn13: 9788026871521
+      asin: B01N2QGMOU
       link: https://openlibrary.org/works/OL1063301W/How_to_Win_Friends_and_Influence_People
+      date_started: 2018-07-01
       date_finished: 2018-12-23
       recommended: false
       progress: 100
@@ -755,7 +854,10 @@
       cover: https://cdn.utf9k.net/books/the-phoenix-project.jpg
       cover_height: 1794
       cover_width: 1200
+      isbn13: 9780988262591
+      asin: 0988262592
       link: https://openlibrary.org/works/OL16806686W/The_Phoenix_Project
+      date_started: null
       date_finished: 2018-12-23
       recommended: true
       progress: 100
@@ -766,7 +868,10 @@
       cover: https://cdn.utf9k.net/books/the-fifth-discipline.jpg
       cover_height: 1425
       cover_width: 938
+      isbn13: 9780385517256
+      asin: 0385517254
       link: https://openlibrary.org/works/OL4440692W/The_Fifth_Discipline
+      date_started: null
       date_finished: 2018-08-05
       recommended: false
       progress: 100
@@ -777,7 +882,10 @@
       cover: https://cdn.utf9k.net/books/the-flinch.jpg
       cover_height: 1200
       cover_width: 1200
+      isbn13: null
+      asin: B00NLJHGOA
       link: https://openlibrary.org/works/OL24137194W/The_Flinch
+      date_started: 2018-03-25
       date_finished: 2018-05-11
       recommended: false
       progress: 100
@@ -788,8 +896,53 @@
       cover: https://cdn.utf9k.net/books/twin-peaks-the-final-dossier.jpg
       cover_height: 1000
       cover_width: 803
+      isbn13: 9781250163301
+      asin: 1250163307
       link: https://openlibrary.org/works/OL18020504W/Twin_Peaks
+      date_started: 2018-04-08
       date_finished: 2018-04-28
+      recommended: false
+      progress: 100
+    
+    - title: The Little Go Book
+      subtitle: null
+      author: Karl Seguin
+      cover: https://cdn.utf9k.net/books/the-little-go-book.jpg
+      cover_height: 1000
+      cover_width: 803
+      isbn13: null
+      asin: B0DTVVG5XW
+      link: https://openlibrary.org/works/OL18020504W/Twin_Peaks
+      date_started: null
+      date_finished: 2018-02-28
+      recommended: false
+      progress: 100
+
+    - title: 20 Python Libraries You Aren't Using
+      subtitle: null
+      author: Caleb Hattingh
+      cover: https://cdn.utf9k.net/books/20-python-libraries-you-arent-using.jpg
+      cover_height: 0
+      cover_width: 0
+      isbn13: 9781491967928
+      asin: 1491967927
+      link: https://www.goodreads.com/book/show/32051366-20-python-libraries-you-aren-t-using
+      date_started: null
+      date_finished: 2018-02-26
+      recommended: false
+      progress: 100
+
+    - title: 20 Python Libraries You Aren't Using
+      subtitle: null
+      author: Caleb Hattingh
+      cover: null
+      cover_height: 0
+      cover_width: 0
+      isbn13: 9781491967928
+      asin: 1491967927
+      link: https://www.goodreads.com/book/show/32051366-20-python-libraries-you-aren-t-using
+      date_started: null
+      date_finished: 2018-02-26
       recommended: false
       progress: 100
 
@@ -799,7 +952,10 @@
       cover: https://cdn.utf9k.net/books/site-reliability-engineering.jpg
       cover_height: 1575
       cover_width: 1200
+      isbn13: 9781491929124
+      asin: 149192912X
       link: https://openlibrary.org/works/OL20028554W/Site_Reliability_Engineering
+      date_started: null
       date_finished: 2018-02-24
       recommended: true
       progress: 100
@@ -810,7 +966,10 @@
       cover: https://cdn.utf9k.net/books/tales-from-the-loop.jpg
       cover_height: 1400
       cover_width: 1417
+      isbn13: 9789187222214
+      asin: 9187222213
       link: https://openlibrary.org/works/OL20040484W/Tales_from_the_Loop
+      date_started: 2018-01-23
       date_finished: 2018-02-06
       recommended: true
       progress: 100
@@ -821,7 +980,10 @@
       cover: https://cdn.utf9k.net/books/shit-london.jpg
       cover_height: 932
       cover_width: 1200
+      isbn13: 9781907554346
+      asin: 1907554343
       link: https://openlibrary.org/works/OL17548993W/Shit_London
+      date_started: 2018-01-23
       date_finished: 2018-01-24
       recommended: false
       progress: 100
@@ -832,7 +994,10 @@
       cover: https://cdn.utf9k.net/books/japanese-game-graphics.jpg
       cover_height: 1000
       cover_width: 742
+      isbn13: 9780060567729
+      asin: 0060567724
       link: https://openlibrary.org/works/OL274966W/Japanese_Game_Graphics
+      date_started: null
       date_finished: 2018-01-14
       recommended: true
       progress: 100
@@ -843,7 +1008,10 @@
       cover: https://cdn.utf9k.net/books/showstopper.jpg
       cover_height: 1829
       cover_width: 1200
+      isbn13: 9780029356715
+      asin: 0029356717
       link: https://openlibrary.org/works/OL106726W/Show-Stopper
+      date_started: null
       date_finished: 2018-01-14
       recommended: true
       progress: 100
@@ -854,7 +1022,10 @@
       cover: https://cdn.utf9k.net/books/half-life-2.jpg
       cover_height: 1179
       cover_width: 904
+      isbn13: 9780761543640
+      asin: 0761543643
       link: https://openlibrary.org/works/OL8010203W/Half-Life_2
+      date_started: null
       date_finished: 2018-01-14
       recommended: true
       progress: 100
@@ -865,7 +1036,10 @@
       cover: https://cdn.utf9k.net/books/pendulum.jpg
       cover_height: 2560
       cover_width: 1684
+      isbn13: 9781452659848
+      asin: 1452659842
       link: https://openlibrary.org/works/OL22646312W/Pendulum
+      date_started: 2018-01-11
       date_finished: 2018-01-13
       recommended: false
       progress: 100
@@ -946,3 +1120,31 @@
     #   date_finished: null
     #   recommended: false
     #   progress: 32
+
+  # - title: The 99% Invisible City
+  #   subtitle: A Field Guide to the Hidden World of Everyday Design
+  #   author: Roman Mars
+  #   cover: https://cdn.utf9k.net/books/the-99-percent-invisible-city.jpg
+  #   cover_height: 0
+  #   cover_width: 0
+  #   isbn13: 9781529355307
+  #   asin: B084D9ZCP6
+  #   link: https://www.goodreads.com/book/show/54869549-the-99-invisible-city
+  #   date_started: 2020-10-24
+  #   date_finished: null
+  #   recommended: false
+  #   progress: 5
+
+  # - title: Original Copies
+  #   subtitle: Architectural Mimicry in Contemporary China
+  #   author: Bianca Bosker
+  #   cover:
+  #   cover_height:
+  #   cover_width:
+  #   isbn13: 9780824836061
+  #   asin: 0824836065
+  #   link: 
+  #   date_started: 2020-12-04
+  #   date_finished: null
+  #   recommended: false
+  #   progress: 5
