Added known reading start dates
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -375,6 +375,7 @@
       isbn13: 9780060517120
       asin: 0060517123
       link: https://openlibrary.org/works/OL20320657W/Crossing_the_Chasm_3rd_Edition
+      date_added: 2020-12-31
       date_started: 2021-05-03
       date_finished: 2021-08-09
       recommended: true
@@ -389,6 +390,7 @@
       isbn13: 9780691174761
       asin: 0691174768
       link: https://openlibrary.org/works/OL24725948W/The_Usefulness_of_Useless_Knowledge
+      date_added: 2021-03-30
       date_started: 2021-06-11
       date_finished: 2021-07-30
       recommended: false
@@ -414,6 +416,7 @@
       isbn13: 9781863959964
       asin: 1863959963
       link: https://openlibrary.org/works/OL19762252W/The_Big_Four
+      date_added: 2018-05-04
       date_started: 2021-05-03
       date_finished: 2021-05-29
       recommended: true
@@ -428,6 +431,7 @@
       isbn13: 9780990976325
       asin: 0990976327
       link: https://openlibrary.org/works/OL17709914W/Little_Rice
+      date_added: 2021-01-09
       date_started: null
       date_finished: 2021-05-05
       recommended: false
@@ -442,6 +446,7 @@
       isbn13: 9780446519250
       asin: 0446519251
       link: https://openlibrary.org/works/OL9493402W/The_Waxman_Report
+      date_added: 2020-01-30
       date_started: null
       date_finished: 2021-04-24
       recommended: true
@@ -456,6 +461,7 @@
       isbn13: null
       asin: B0DTRLCN3R
       link: https://openlibrary.org/works/OL38477W/In_the_Beginning...Was_the_Command_Line
+      date_added: 2020-07-09
       date_started: 2021-01-01
       date_finished: 2021-02-20
       recommended: false
@@ -470,6 +476,7 @@
       isbn13: 9781591841661
       asin: 1591841666
       link: https://openlibrary.org/works/OL2329204W/The_Dip
+      date_added: 2020-10-21
       date_started: 2021-02-12
       date_finished: 2021-02-13
       recommended: false
@@ -484,6 +491,7 @@
       isbn13: 9780970312594
       asin: 0970312598
       link: https://openlibrary.org/works/OL21948057W/Propaganda
+      date_added: 2020-03-14
       date_started: 2021-01-18
       date_finished: 2021-02-12
       recommended: true
@@ -501,6 +509,7 @@
       isbn13: 9781416596585
       asin: 1416596585
       link: https://openlibrary.org/works/OL17717287W/In_the_Plex
+      date_added: 2020-10-18
       date_started: 2020-10-18
       date_finished: 2020-12-28
       recommended: true
@@ -515,6 +524,7 @@
       isbn13: 9780688171629
       asin: 0688171621
       link: https://openlibrary.org/works/OL1959419W/Naked_Pictures_of_Famous_People
+      date_added: 2020-11-03
       date_started: 2020-11-10
       date_finished: 2020-12-05
       recommended: false
@@ -529,6 +539,7 @@
       isbn13: 9780805091748
       asin: 0805091742
       link: https://openlibrary.org/works/OL15436462W/The_Checklist_Manifesto
+      date_added: 2020-02-07
       date_started: 2020-11-21
       date_finished: 2020-12-04
       recommended: true
@@ -543,6 +554,7 @@
       isbn13: 9780593139134
       asin: 0593139135
       link: https://openlibrary.org/works/OL23520310W/Greenlights
+      date_added: 2020-10-28
       date_started: 2020-10-28
       date_finished: 2020-11-09
       recommended: false
@@ -557,6 +569,7 @@
       isbn13: 9781600964336
       asin: 1600964338
       link: https://openlibrary.org/works/OL20281370W/The_Death_of_Ivan_Ilych
+      date_added: 2020-09-19
       date_started: 2020-10-03
       date_finished: 2020-10-24
       recommended: false
@@ -571,6 +584,7 @@
       isbn13: null
       asin: B0DTT7FXNY
       link: https://openlibrary.org/works/OL5098582W/As_We_May_Think
+      date_added: 2020-08-19
       date_started: 2020-09-30
       date_finished: 2020-09-30
       recommended: true
@@ -585,6 +599,7 @@
       isbn13: 9780374718435
       asin: B076H4WMY1
       link: https://openlibrary.org/works/OL20152367W/Talking_to_My_Daughter_About_the_Economy
+      date_added: 2020-09-14
       date_started: 2020-09-14
       date_finished: 2020-09-30
       recommended: true
@@ -599,6 +614,7 @@
       isbn13: 9780807012390
       asin: 0807012394
       link: https://openlibrary.org/works/OL12381026W/The_Miracle_of_Mindfulness
+      date_added: 2020-09-14
       date_started: 2020-09-14
       date_finished: 2020-09-19
       recommended: false
@@ -613,6 +629,7 @@
       isbn13: 9780691122946
       asin: 0691122946
       link: https://openlibrary.org/works/OL1829528W/On_Bullshit
+      date_added: 2020-09-15
       date_started: null
       date_finished: 2020-09-15
       recommended: true
@@ -627,6 +644,7 @@
       isbn13: 9780999745465
       asin: 0999745468
       link: https://openlibrary.org/works/OL19764853W/The_Curse_of_Bigness
+      date_added: 2020-05-11
       date_started: 2020-09-12
       date_finished: 2020-09-14
       recommended: true
@@ -641,6 +659,7 @@
       isbn13: 9780761103462
       asin: 0761103465
       link: https://openlibrary.org/works/OL2646874W/Memos_from_the_Chairman
+      date_added: 2020-09-11
       date_started: null
       date_finished: 2020-09-11
       recommended: false
@@ -655,6 +674,7 @@
       isbn13: 9781491962442
       asin: 1491962445
       link: https://openlibrary.org/works/OL20055086W/Learning_HTTP_2
+      date_added: 2020-09-02
       date_started: null
       date_finished: 2020-09-04
       recommended: false
@@ -669,6 +689,7 @@
       isbn13: 9780307269935
       asin: 0307269930
       link: https://openlibrary.org/works/OL15118227W/The_Master_Switch
+      date_added: 2020-04-28
       date_started: 2020-06-11
       date_finished: 2020-08-09
       recommended: true
@@ -683,6 +704,7 @@
       isbn13: null
       asin: B07D23CFGR
       link: https://openlibrary.org/works/OL17930368W/Atomic_Habits
+      date_added: 2020-07-17
       date_started: null
       date_finished: 2020-07-12
       recommended: false
@@ -697,6 +719,7 @@
       isbn13: 9780679778318
       asin: 0679778314
       link: https://openlibrary.org/works/OL20307725W/The_Inner_Game_of_Tennis
+      date_added: 2020-05-25
       date_started: 2020-06-01
       date_finished: 2020-06-06
       recommended: true
@@ -711,6 +734,7 @@
       isbn13: 9780553296341
       asin: 0553296345
       link: https://openlibrary.org/works/OL103179W/Zen_in_The_Art_of_Writing
+      date_added: 2020-02-02
       date_started: null
       date_finished: 2020-05-11
       recommended: false
@@ -725,6 +749,7 @@
       isbn13: 9780815748410
       asin: 0815748418
       link: https://openlibrary.org/works/OL3479766W/Red_Tape
+      date_added: 2020-01-12
       date_started: 2020-02-25
       date_finished: 2020-03-23
       recommended: false
@@ -739,6 +764,7 @@
       isbn13: 9780143036357
       asin: 0143036351
       link: https://openlibrary.org/works/OL1168147W/Why_I_Write
+      date_added: 2020-02-02
       date_started: 2020-02-09
       date_finished: 2020-02-25
       recommended: false
@@ -753,6 +779,7 @@
       isbn13: null
       asin: B0DT1G9HQS
       link: https://openlibrary.org/works/OL17043709W/Dirty_Politics
+      date_added: 2020-02-07
       date_started: 2020-02-07
       date_finished: 2020-02-09
       recommended: true
@@ -767,6 +794,7 @@
       isbn13: 9780142000281
       asin: 0142000280
       link: https://openlibrary.org/works/OL20777755W/Getting_Things_Done
+      date_added: 2020-02-07
       date_started: null
       date_finished: 2020-02-07
       recommended: false
@@ -781,6 +809,7 @@
       isbn13: 9781449304683
       asin: 1449304680
       link: https://openlibrary.org/works/OL16538242W/The_Information_Diet
+      date_added: 2018-04-03
       date_started: 2020-01-26
       date_finished: 2020-01-30
       recommended: false
@@ -795,6 +824,7 @@
       isbn13: 9780141182001
       asin: 0141182008
       link: https://openlibrary.org/works/OL1230690W/The_Myth_of_Sisyphus_and_Other_Essays
+      date_added: 2020-01-02
       date_started: 2020-01-20
       date_finished: 2020-01-26
       recommended: false
@@ -812,6 +842,7 @@
       isbn13: 9781942788768
       asin: 1942788762
       link: https://openlibrary.org/works/OL20716769W/The_Unicorn_Project
+      date_added: 2019-12-24
       date_started: null
       date_finished: 2019-12-25
       recommended: false
@@ -826,6 +857,7 @@
       isbn13: 9780393652246
       asin: 0393652246
       link: https://openlibrary.org/works/OL20125074W/Super_Pumped
+      date_added: 2019-11-27
       date_started: null
       date_finished: 2019-11-26
       recommended: true
@@ -843,6 +875,7 @@
       isbn13: 9788026871521
       asin: B01N2QGMOU
       link: https://openlibrary.org/works/OL1063301W/How_to_Win_Friends_and_Influence_People
+      date_added: 2018-07-01
       date_started: 2018-07-01
       date_finished: 2018-12-23
       recommended: false
@@ -857,6 +890,7 @@
       isbn13: 9780988262591
       asin: 0988262592
       link: https://openlibrary.org/works/OL16806686W/The_Phoenix_Project
+      date_added: 2018-12-23
       date_started: null
       date_finished: 2018-12-23
       recommended: true
@@ -871,6 +905,7 @@
       isbn13: 9780385517256
       asin: 0385517254
       link: https://openlibrary.org/works/OL4440692W/The_Fifth_Discipline
+      date_added: 2018-08-05
       date_started: null
       date_finished: 2018-08-05
       recommended: false
@@ -885,6 +920,7 @@
       isbn13: null
       asin: B00NLJHGOA
       link: https://openlibrary.org/works/OL24137194W/The_Flinch
+      date_added: 2018-03-25
       date_started: 2018-03-25
       date_finished: 2018-05-11
       recommended: false
@@ -899,6 +935,7 @@
       isbn13: 9781250163301
       asin: 1250163307
       link: https://openlibrary.org/works/OL18020504W/Twin_Peaks
+      date_added: 2018-04-08
       date_started: 2018-04-08
       date_finished: 2018-04-28
       recommended: false
@@ -913,6 +950,7 @@
       isbn13: null
       asin: B0DTVVG5XW
       link: https://openlibrary.org/works/OL18020504W/Twin_Peaks
+      date_added: 2018-02-28
       date_started: null
       date_finished: 2018-02-28
       recommended: false
@@ -941,6 +979,7 @@
       isbn13: 9781491967928
       asin: 1491967927
       link: https://www.goodreads.com/book/show/32051366-20-python-libraries-you-aren-t-using
+      date_added: 2018-02-26
       date_started: null
       date_finished: 2018-02-26
       recommended: false
@@ -955,6 +994,7 @@
       isbn13: 9781491929124
       asin: 149192912X
       link: https://openlibrary.org/works/OL20028554W/Site_Reliability_Engineering
+      date_added: 2018-02-24
       date_started: null
       date_finished: 2018-02-24
       recommended: true
@@ -969,6 +1009,7 @@
       isbn13: 9789187222214
       asin: 9187222213
       link: https://openlibrary.org/works/OL20040484W/Tales_from_the_Loop
+      date_added: 2018-01-14
       date_started: 2018-01-23
       date_finished: 2018-02-06
       recommended: true
@@ -983,6 +1024,7 @@
       isbn13: 9781907554346
       asin: 1907554343
       link: https://openlibrary.org/works/OL17548993W/Shit_London
+      date_added: 2018-01-23
       date_started: 2018-01-23
       date_finished: 2018-01-24
       recommended: false
@@ -997,6 +1039,7 @@
       isbn13: 9780060567729
       asin: 0060567724
       link: https://openlibrary.org/works/OL274966W/Japanese_Game_Graphics
+      date_added: 2018-01-14
       date_started: null
       date_finished: 2018-01-14
       recommended: true
@@ -1011,6 +1054,7 @@
       isbn13: 9780029356715
       asin: 0029356717
       link: https://openlibrary.org/works/OL106726W/Show-Stopper
+      date_added: 2018-01-14
       date_started: null
       date_finished: 2018-01-14
       recommended: true
@@ -1025,6 +1069,7 @@
       isbn13: 9780761543640
       asin: 0761543643
       link: https://openlibrary.org/works/OL8010203W/Half-Life_2
+      date_added: 2018-01-14
       date_started: null
       date_finished: 2018-01-14
       recommended: true
@@ -1039,6 +1084,7 @@
       isbn13: 9781452659848
       asin: 1452659842
       link: https://openlibrary.org/works/OL22646312W/Pendulum
+      date_added: 2018-01-13
       date_started: 2018-01-11
       date_finished: 2018-01-13
       recommended: false
@@ -1121,30 +1167,32 @@
     #   recommended: false
     #   progress: 32
 
-  # - title: The 99% Invisible City
-  #   subtitle: A Field Guide to the Hidden World of Everyday Design
-  #   author: Roman Mars
-  #   cover: https://cdn.utf9k.net/books/the-99-percent-invisible-city.jpg
-  #   cover_height: 0
-  #   cover_width: 0
-  #   isbn13: 9781529355307
-  #   asin: B084D9ZCP6
-  #   link: https://www.goodreads.com/book/show/54869549-the-99-invisible-city
-  #   date_started: 2020-10-24
-  #   date_finished: null
-  #   recommended: false
-  #   progress: 5
+    # - title: The 99% Invisible City
+    #   subtitle: A Field Guide to the Hidden World of Everyday Design
+    #   author: Roman Mars
+    #   cover: https://cdn.utf9k.net/books/the-99-percent-invisible-city.jpg
+    #   cover_height: 0
+    #   cover_width: 0
+    #   isbn13: 9781529355307
+    #   asin: B084D9ZCP6
+    #   link: https://www.goodreads.com/book/show/54869549-the-99-invisible-city
+    #   date_added: 2020-10-24
+    #   date_started: 2020-10-24
+    #   date_finished: null
+    #   recommended: false
+    #   progress: 5
 
-  # - title: Original Copies
-  #   subtitle: Architectural Mimicry in Contemporary China
-  #   author: Bianca Bosker
-  #   cover:
-  #   cover_height:
-  #   cover_width:
-  #   isbn13: 9780824836061
-  #   asin: 0824836065
-  #   link: 
-  #   date_started: 2020-12-04
-  #   date_finished: null
-  #   recommended: false
-  #   progress: 5
+    # - title: Original Copies
+    #   subtitle: Architectural Mimicry in Contemporary China
+    #   author: Bianca Bosker
+    #   cover:
+    #   cover_height:
+    #   cover_width:
+    #   isbn13: 9780824836061
+    #   asin: 0824836065
+    #   link: https://www.goodreads.com/book/show/15938487-original-copies
+    #   date_added: 2020-12-04
+    #   date_started: 2020-12-04
+    #   date_finished: null
+    #   recommended: false
+    #   progress: 5
