--- a/_data/books.yml
+++ b/_data/books.yml
@@ -7,7 +7,10 @@
       cover: https://cdn.utf9k.net/books/designing-data-intensive-applications.jpg
       cover_height: 1575
       cover_width: 1200
+      isbn13: null
+      asin: null
       link: https://dataintensive.net
+      date_added: null
       date_started: 2022-07-05
       date_finished: null
       recommended: false
@@ -19,7 +22,10 @@
       cover: https://cdn.utf9k.net/books/moral-mazes.jpg
       cover_height: 1360
       cover_width: 907
+      isbn13: null
+      asin: null
       link: https://global.oup.com/academic/product/moral-mazes-9780199729883
+      date_added: null
       date_started: 2025-01-25
       date_finished: null
       recommended: false
@@ -31,7 +37,10 @@
       cover: https://cdn.utf9k.net/books/amusing-ourselves-to-death.jpg
       cover_height: 2560
       cover_width: 1693
+      isbn13: null
+      asin: null
       link: https://www.penguinrandomhouse.com/books/297276/amusing-ourselves-to-death-by-neil-postman/
+      date_added: null
       date_started: 2024-12-31
       date_finished: 2025-01-20
       recommended: true
@@ -46,7 +55,11 @@
       cover: https://cdn.utf9k.net/books/the-wisdom-of-anxiety.jpg
       cover_height: 1500
       cover_width: 1000
+      isbn13: null
+      asin: null
       link: https://conscious-transitions.com/the-wisdom-of-anxiety/
+      date_added: null
+      date_started: null
       date_finished: 2024-12-30
       recommended: false
       progress: 100
@@ -57,7 +70,11 @@
       cover: https://cdn.utf9k.net/books/the-upward-spiral.jpg
       cover_height: 1801
       cover_width: 1200
+      isbn13: null
+      asin: null
       link: https://www.alexkorbphd.com/the-upward-spiral-method/
+      date_added: null
+      date_started: null
       date_finished: 2024-12-13
       recommended: true
       progress: 100
@@ -68,7 +85,11 @@
       cover: https://cdn.utf9k.net/books/personal-kanban.jpg
       cover_height: 1360
       cover_width: 907
+      isbn13: null
+      asin: null
       link: https://www.personalkanban.com/
+      date_added: null
+      date_started: null
       date_finished: 2024-11-23
       recommended: false
       progress: 100
@@ -79,7 +100,11 @@
       cover: https://cdn.utf9k.net/books/meditations-for-mortals.jpg
       cover_height: 2620
       cover_width: 1630
+      isbn13: null
+      asin: null
       link: https://www.penguin.co.nz/books/meditations-for-mortals-9781847927620
+      date_added: null
+      date_started: null
       date_finished: 2024-10-06
       recommended: true
       progress: 100
@@ -90,7 +115,11 @@
       cover: https://cdn.utf9k.net/books/means-of-control.jpg
       cover_height: 2776
       cover_width: 1838
+      isbn13: null
+      asin: null
       link: https://www.penguinrandomhouse.com/books/706321/means-of-control-by-byron-tau/
+      date_added: null
+      date_started: null
       date_finished: 2024-06-07
       recommended: true
       progress: 100
@@ -101,7 +130,11 @@
       cover: https://cdn.utf9k.net/books/how-big-things-get-done.jpg
       cover_height: 2500
       cover_width: 1688
+      isbn13: null
+      asin: null
       link: https://www.penguinrandomhouse.com/books/672118/how-big-things-get-done-by-bent-flyvbjerg-and-dan-gardner/
+      date_added: null
+      date_started: null
       date_finished: 2024-06-01
       recommended: true
       progress: 100
@@ -112,7 +145,11 @@
       cover: https://cdn.utf9k.net/books/burn-book.jpg
       cover_height: 2113
       cover_width: 1400
+      isbn13: null
+      asin: null
       link: https://www.simonandschuster.com/books/Burn-Book/Kara-Swisher/9781982163891
+      date_added: null
+      date_started: null
       date_finished: 2024-03-10
       recommended: false
       progress: 100
@@ -123,7 +160,11 @@
       cover: https://cdn.utf9k.net/books/hacks-leaks-and-revelations.jpg
       cover_height: 1832
       cover_width: 1400
+      isbn13: null
+      asin: null
       link: https://nostarch.com/hacks-leaks-and-revelations
+      date_added: null
+      date_started: null
       date_finished: 2024-03-06
       recommended: false
       progress: 100 
@@ -134,7 +175,11 @@
       cover: https://cdn.utf9k.net/books/creative-dysregulation.jpg
       cover_height: 1510
       cover_width: 1014
+      isbn13: null
+      asin: null
       link: https://www.kellywildemiller.com/creativedysregulation
+      date_added: null
+      date_started: null
       date_finished: 2024-03-05
       recommended: false
       progress: 100
@@ -145,7 +190,11 @@
       cover: https://cdn.utf9k.net/books/risk-and-reward.jpg
       cover_height: 1208
       cover_width: 800
+      isbn13: null
+      asin: null
       link: https://openlibrary.org/works/OL26349597W/Risk_and_Reward
+      date_added: null
+      date_started: null
       date_finished: 2024-02-11
       recommended: true
       progress: 100
@@ -156,7 +205,11 @@
       cover: https://cdn.utf9k.net/books/networks-of-new-york.jpg
       cover_height: 1903
       cover_width: 1200
+      isbn13: null
+      asin: null
       link: https://www.penguinrandomhouse.com/books/538586/networks-of-new-york-by-ingrid-burrington/
+      date_added: null
+      date_started: null
       date_finished: 2024-02-03
       recommended: true
       progress: 100
@@ -167,7 +220,11 @@
       cover: https://cdn.utf9k.net/books/silent-hill-2.jpg
       cover_height: 1000
       cover_width: 667
+      isbn13: null
+      asin: null
       link: https://web.archive.org/web/20070207130119/http://www.konami.jp/book/cgi-bin/detail.cgi?goods_key=ISBN4-86155-832-8
+      date_added: null
+      date_started: null
       date_finished: 2024-02-02 
       recommended: false
       progress: 100
@@ -178,7 +235,11 @@
       cover: https://cdn.utf9k.net/books/the-shallows.jpg
       cover_height: 1799
       cover_width: 1200
+      isbn13: null
+      asin: null
       link: https://openlibrary.org/works/OL15297392W/The_Shallows
+      date_added: null
+      date_started: null
       date_finished: 2024-01-27
       recommended: false
       progress: 100
@@ -188,7 +249,11 @@
       cover: https://cdn.utf9k.net/books/creative-doing.jpg
       cover_height: 888
       cover_width: 584
+      isbn13: null
+      asin: null
       link: https://openlibrary.org/works/OL37513885W/Creative_Doing_75_Practical_Exercises_to_Unblock_Your_Creative_Potential_in_Your_Work_Hobby_or_Next_
+      date_added: null
+      date_started: null
       date_finished: 2024-01-09
       recommended: false
       progress: 100
@@ -198,7 +263,11 @@
       cover: https://cdn.utf9k.net/books/digital-zettelkasten.jpg
       cover_height: 1360
       cover_width: 850
+      isbn13: null
+      asin: null
       link: https://openlibrary.org/works/OL24703365W/Digital_Zettelkasten
+      date_added: null
+      date_started: null
       date_finished: 2024-01-04
       recommended: false
       progress: 100
@@ -209,7 +278,11 @@
       cover: https://cdn.utf9k.net/books/what-the-ceo-wants-you-to-know.jpg
       cover_height: 2340
       cover_width: 1527
+      isbn13: null
+      asin: null
       link: https://openlibrary.org/works/OL34804299W/What_the_CEO_Wants_You_to_Know
+      date_added: null
+      date_started: null
       date_finished: 2024-01-03
       recommended: false
       progress: 100
@@ -220,7 +293,11 @@
       cover: https://cdn.utf9k.net/books/high-performance-browser-networking.jpg
       cover_height: 1377
       cover_width: 1050
+      isbn13: null
+      asin: null
       link: https://www.oreilly.com/library/view/high-performance-browser/9781449344757/
+      date_added: null
+      date_started: null
       date_finished: 2024-01-03
       recommended: false
       progress: 100
@@ -234,7 +311,11 @@
       cover: https://cdn.utf9k.net/books/blood-sweat-and-pixels.jpg
       cover_height: 1808
       cover_width: 1200
+      isbn13: null
+      asin: null
       link: https://openlibrary.org/works/OL19721368W/Blood_sweat_and_pixels
+      date_added: null
+      date_started: null
       date_finished: 2023-12-25
       recommended: false
       progress: 100
@@ -245,7 +326,11 @@
       cover: https://cdn.utf9k.net/books/walking-your-blues-away.jpg
       cover_height: 2700
       cover_width: 1800
+      isbn13: null
+      asin: null
       link: https://openlibrary.org/works/OL554786W/Walking_Your_Blues_Away
+      date_added: 2023-10-27
+      date_started: 2023-10-27
       date_finished: 2023-12-15
       recommended: false
       progress: 100
@@ -256,7 +341,11 @@
       cover: https://cdn.utf9k.net/books/taxtopia.jpg
       cover_height: 2835
       cover_width: 1878
+      isbn13: null
+      asin: null
       link: https://openlibrary.org/works/OL28024085W/Taxtopia
+      date_added: 2023-10-27
+      date_started: 2023-10-27
       date_finished: 2023-12-05
       recommended: true
       progress: 100
@@ -267,7 +356,11 @@
       cover: https://cdn.utf9k.net/books/the-para-method.jpg
       cover_height: 2070
       cover_width: 1538
+      isbn13: null
+      asin: null
       link: https://openlibrary.org/works/OL35715842W/The_PARA_Method
+      date_added: null
+      date_started: null
       date_finished: 2023-08-30
       recommended: false
       progress: 100
@@ -278,7 +371,11 @@
       cover: https://cdn.utf9k.net/books/hanging-out.jpg
       cover_height: 1240
       cover_width: 797
+      isbn13: null
+      asin: null
       link: https://openlibrary.org/works/OL27939130W/Hanging_Out
+      date_added: null
+      date_started: null
       date_finished: 2023-06-06
       recommended: false
       progress: 100
@@ -289,7 +386,11 @@
       cover: https://cdn.utf9k.net/books/like-comment-subscribe.jpg
       cover_height: 1812
       cover_width: 1200
+      isbn13: null
+      asin: null
       link: https://openlibrary.org/works/OL26345815W/Like_Comment_Subscribe
+      date_added: null
+      date_started: null
       date_finished: 2023-02-07
       recommended: true
       progress: 100
@@ -303,7 +404,11 @@
       cover: https://cdn.utf9k.net/books/build.jpg
       cover_height: 2560
       cover_width: 1600
+      isbn13: null
+      asin: null
       link: https://openlibrary.org/works/OL27739453W/Build
+      date_added: null
+      date_started: null
       date_finished: 2022-10-29
       recommended: true
       progress: 100
@@ -314,7 +419,11 @@
       cover: https://cdn.utf9k.net/books/high-output-management.jpg
       cover_height: 2411
       cover_width: 1563
+      isbn13: null
+      asin: null
       link: https://openlibrary.org/works/OL2355834W/High_Output_Management
+      date_added: null
+      date_started: null
       date_finished: 2022-10-23
       recommended: true
       progress: 100
